# mnci

./: Jenkinsfile  Jenkinsfile.1  Jenkinsfile.archlinux  Jenkinsfile.freebsd  Jenkinsfile.matrix  Jenkinsfile.test  Makefile.am  Makefile.mn  Makefile.mnapp  Makefile.mncommon  Makefile.mndiag  Makefile.mnl4c  Makefile.mnlipc  Makefile.mnmath  Makefile.mnprotobuf  Makefile.mnspinfo  Makefile.mnthr  Makefile.mnyaml  Makefile.mrkapp  Makefile.mrkcommon  Makefile.mrkl4c  Makefile.mrkprotobuf  Makefile.mrkthr  README  configure.ac  mndev-platform.sh  run-jenkins  setup-env
ansible/: do-it  inventory
ansible/playbooks/: admin.yml  dev.yml  development.sh  setup.yml  test-001.yml
ansible/playbooks/group_vars/arch/: common
ansible/playbooks/group_vars/archlinux/: common
ansible/playbooks/group_vars/centos/: common
ansible/playbooks/group_vars/freebsd/: common
ansible/playbooks/group_vars/ubuntu/: common
ansible/playbooks/roles/admin/tasks/: main.yml
ansible/playbooks/roles/common/tasks/: main.yml
ansible/playbooks/roles/development/vars/: main.yml
playbooks/: development.sh  test-001.yml
playbooks/roles/admin/vars/: main.yml
playbooks/roles/common/tasks/: main.yml
playbooks/roles/common/vars/: main.yml
