AC_INIT(mnci, 0.1, markiyan.kushnir@gmail.com, asd, https://github.com/mkushnir)

AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR([.ac-aux])
AC_CONFIG_FILES([Makefile])
dnl AC_CONFIG_HEADERS(config.h)

dnl AC_CANONICAL_HOST
dnl AC_CANONICAL_TARGET

dnl AC_LANG(C)
dnl AC_PROG_INSTALL
AM_INIT_AUTOMAKE([foreign subdir-objects])
dnl LT_INIT
AM_SILENT_RULES([yes])


AC_OUTPUT
